[project]
name = "rtimageviz"
version = "0.1.0"
description = ""
authors = [
    {name = "Rongtingting",email = "rthuang@foxmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib (>=1.5.0,<2.0.0)",
    "numpy (>1.23,<2)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "imagecodecs (>=2024.12.30,<2025.0.0)",
    "matplotlib (>=3,<4)",
    "tifffile (<2024.9.20)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "zarr (>=3.1.3,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tqdm-joblib (>=0.0.5,<0.0.6)",
    "ipykernel (>=7.1.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
